carga de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+
+    <!-- <img src="http://localhost:3000/image/productos/5e0ecd612a59ab473cd57a35-439.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjpmYWxzZSwiZ29vZ2xlIjpmYWxzZSwiX2lkIjoiNWUwZDAzOTNjNjViZGQyNjU4Yzg0NDRhIiwibm9tYnJlIjoiSm9zw6kgUm9iZXJ0byBGaWFzY2FybyIsImVtYWlsIjoidGVzdDFAZ21haWwuY29tIiwiX192IjowfSwiaWF0IjoxNTc4MDgyNDIyLCJleHAiOjE1NzgwODUwMTR9.Qzl2ogthGvC3ij43R7xaesBMw41rN-1ESnT4ucXVifs" alt=""> -->
+
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
